--- a/_config.yml
+++ b/_config.yml
@@ -51,12 +51,12 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             - | # 网站小图标，可换成你自己的图片，改href中的部分即可
               <link
                 rel="apple-touch-icon-precomposed"
-                href="/asset/image/main_logo.jpg"
+                href="./asset/image/main_logo.jpg"
               />
               <link
                 rel="shortcut
                 icon"
-                href="/asset/image/main_logo.jpg"
+                href="./asset/image/main_logo.jpg"
               />
             - | # 来自lanyon的页面样式，不要改
               <link
@@ -153,7 +153,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             disable: false # 是否不显示sidebar
             avatar: # 侧边栏显示的头像
               enable: true
-              img: /asset/image/main_logo.jpg # 头像的地址
+              img: ./asset/image/main_logo.jpg # 头像的地址
             nav: # 导航部分的内容，你也可以自己增加文字、图标（来自fontawesome）和对应的链接
               - title: '<i class="fas fa-home fa-fw"></i> 首页'
                 href: /
