--- a/_config.yml
+++ b/_config.yml
@@ -161,8 +161,8 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href: /comments/
               - title: '<i class="fas fa-tags fa-fw"></i> 标签'
                 href: /tags/
-              - title: '<i class="fas fa-archive fa-fw"></i> 博客'
-                href: /_posts/
+              - title: '<i class="fas fa-archive fa-fw"></i> 归档'
+                href: /archive/
               - title: '<i class="fas fa-coffee fa-fw"></i> 打赏'
                 href: /merger/
             simple_jekyll_search: # 侧边栏的全站搜索
